scores updated, notebook 4 and 5 combined

--- a/NYC Taxi 1 - Mean Duration.ipynb
+++ b/NYC Taxi 1 - Mean Duration.ipynb
@@ -16,10 +16,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/venv/local/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -283,10 +290,10 @@
    "source": [
     "<dt>This solution:</dt>\n",
     "<dd>&nbsp; &nbsp; Received a score of 0.82631 on the Kaggle competition.</dd>\n",
-    "<dd>&nbsp; &nbsp; Placed 1151 out of 1257.</dd>\n",
-    "<dd>&nbsp; &nbsp; Beat 9% of competitors on the Kaggle.</dd>\n",
+    "<dd>&nbsp; &nbsp; Placed 1158 out of 1257.</dd>\n",
+    "<dd>&nbsp; &nbsp; Beat 8% of competitors on the Kaggle.</dd>\n",
     "\n",
-    "September 7, 2017."
+    "December 27, 2017."
    ]
   }
  ],
@@ -306,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
