--- a/NYC Taxi 2 - Baseline Solution.ipynb
+++ b/NYC Taxi 2 - Baseline Solution.ipynb
@@ -15,10 +15,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/venv/local/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -28,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -240,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -434,7 +437,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -453,7 +456,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -471,42 +474,39 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-rmse:5.00492\tvalid-rmse:5.00431\n",
+      "[0]\ttrain-rmse:5.00222\tvalid-rmse:5.00165\n",
       "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
       "\n",
       "Will train until valid-rmse hasn't improved in 60 rounds.\n",
-      "[10]\ttrain-rmse:0.998573\tvalid-rmse:0.99962\n",
-      "[20]\ttrain-rmse:0.560765\tvalid-rmse:0.563015\n",
-      "[30]\ttrain-rmse:0.514289\tvalid-rmse:0.517435\n",
-      "[40]\ttrain-rmse:0.498138\tvalid-rmse:0.502091\n",
-      "[50]\ttrain-rmse:0.475875\tvalid-rmse:0.480689\n",
-      "[60]\ttrain-rmse:0.466928\tvalid-rmse:0.47247\n",
-      "[70]\ttrain-rmse:0.446379\tvalid-rmse:0.452796\n",
-      "[80]\ttrain-rmse:0.443136\tvalid-rmse:0.450146\n",
-      "[90]\ttrain-rmse:0.437758\tvalid-rmse:0.445328\n",
-      "[100]\ttrain-rmse:0.42893\tvalid-rmse:0.437137\n",
-      "[110]\ttrain-rmse:0.424125\tvalid-rmse:0.432772\n",
-      "[120]\ttrain-rmse:0.423322\tvalid-rmse:0.432275\n",
-      "[130]\ttrain-rmse:0.419133\tvalid-rmse:0.428544\n",
-      "[140]\ttrain-rmse:0.415563\tvalid-rmse:0.425435\n",
-      "[150]\ttrain-rmse:0.413068\tvalid-rmse:0.423458\n",
-      "[160]\ttrain-rmse:0.406811\tvalid-rmse:0.417733\n",
-      "[170]\ttrain-rmse:0.403302\tvalid-rmse:0.414718\n",
-      "[180]\ttrain-rmse:0.402445\tvalid-rmse:0.414205\n",
-      "[190]\ttrain-rmse:0.40076\tvalid-rmse:0.412809\n",
-      "[200]\ttrain-rmse:0.398694\tvalid-rmse:0.411057\n",
-      "[210]\ttrain-rmse:0.397559\tvalid-rmse:0.410176\n",
-      "[220]\ttrain-rmse:0.397065\tvalid-rmse:0.409905\n",
-      "[226]\ttrain-rmse:0.396364\tvalid-rmse:0.409369\n",
-      "Modeling RMSLE 0.40937\n"
+      "[10]\ttrain-rmse:1.0345\tvalid-rmse:1.03529\n",
+      "[20]\ttrain-rmse:0.588563\tvalid-rmse:0.590879\n",
+      "[30]\ttrain-rmse:0.521021\tvalid-rmse:0.524257\n",
+      "[40]\ttrain-rmse:0.489848\tvalid-rmse:0.494019\n",
+      "[50]\ttrain-rmse:0.475273\tvalid-rmse:0.480304\n",
+      "[60]\ttrain-rmse:0.470008\tvalid-rmse:0.475673\n",
+      "[70]\ttrain-rmse:0.459662\tvalid-rmse:0.465998\n",
+      "[80]\ttrain-rmse:0.454078\tvalid-rmse:0.461092\n",
+      "[90]\ttrain-rmse:0.45028\tvalid-rmse:0.457809\n",
+      "[100]\ttrain-rmse:0.443367\tvalid-rmse:0.45131\n",
+      "[110]\ttrain-rmse:0.435637\tvalid-rmse:0.444054\n",
+      "[120]\ttrain-rmse:0.432269\tvalid-rmse:0.441041\n",
+      "[130]\ttrain-rmse:0.429166\tvalid-rmse:0.438351\n",
+      "[140]\ttrain-rmse:0.427592\tvalid-rmse:0.437218\n",
+      "[150]\ttrain-rmse:0.424559\tvalid-rmse:0.434707\n",
+      "[160]\ttrain-rmse:0.421582\tvalid-rmse:0.432094\n",
+      "[170]\ttrain-rmse:0.419642\tvalid-rmse:0.430527\n",
+      "[180]\ttrain-rmse:0.413601\tvalid-rmse:0.425028\n",
+      "[190]\ttrain-rmse:0.412747\tvalid-rmse:0.424522\n",
+      "[200]\ttrain-rmse:0.407089\tvalid-rmse:0.419405\n",
+      "[210]\ttrain-rmse:0.405644\tvalid-rmse:0.418369\n",
+      "[220]\ttrain-rmse:0.404136\tvalid-rmse:0.41707\n",
+      "Modeling RMSLE 0.41591\n"
      ]
     }
    ],
@@ -525,9 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -560,23 +558,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>id3004672</th>\n",
-       "      <td>735.397034</td>\n",
+       "      <td>732.184448</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id3505355</th>\n",
-       "      <td>431.585022</td>\n",
+       "      <td>464.602142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id1217141</th>\n",
-       "      <td>458.278717</td>\n",
+       "      <td>422.631470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id2150126</th>\n",
-       "      <td>1094.633301</td>\n",
+       "      <td>1113.882446</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id1598245</th>\n",
-       "      <td>285.801025</td>\n",
+       "      <td>290.918182</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -585,11 +583,11 @@
       "text/plain": [
        "           trip_duration\n",
        "id                      \n",
-       "id3004672     735.397034\n",
-       "id3505355     431.585022\n",
-       "id1217141     458.278717\n",
-       "id2150126    1094.633301\n",
-       "id1598245     285.801025"
+       "id3004672     732.184448\n",
+       "id3505355     464.602142\n",
+       "id1217141     422.631470\n",
+       "id2150126    1113.882446\n",
+       "id1598245     290.918182"
       ]
      },
      "execution_count": 10,
@@ -605,6 +603,46 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(625134, 1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(625134, 14)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -618,12 +656,12 @@
    "metadata": {},
    "source": [
     "<dt>This solution:</dt>\n",
-    "<dd>&nbsp; &nbsp; Received a score of 0.46084 on the Kaggle competition.</dd>\n",
-    "<dd>&nbsp; &nbsp; Placed 703 out of 1257.</dd>\n",
-    "<dd>&nbsp; &nbsp; Beat 44% of competitors on the Kaggle competition.</dd>\n",
-    "<dd>&nbsp; &nbsp; Had a modeling RMSLE of 0.40937</dd>\n",
+    "<dd>&nbsp; &nbsp; Received a score of 0.46589 on the Kaggle competition.</dd>\n",
+    "<dd>&nbsp; &nbsp; Placed 738 out of 1257.</dd>\n",
+    "<dd>&nbsp; &nbsp; Beat 41% of competitors on the Kaggle competition.</dd>\n",
+    "<dd>&nbsp; &nbsp; Had a modeling RMSLE of 0.41591</dd>\n",
     "\n",
-    "September 7, 2017.\n",
+    "December 27, 2017.\n",
     "\n",
     "<h2>Additional Analysis</h2>\n",
     "<p>Let's look at how important each feature was for the model.</p>"
@@ -631,10 +669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -663,64 +699,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>pickup_latitude</td>\n",
-       "      <td>9476.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>dropoff_longitude</td>\n",
+       "      <td>8928.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>dropoff_latitude</td>\n",
-       "      <td>7998.0</td>\n",
+       "      <td>8445.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>dropoff_longitude</td>\n",
-       "      <td>7753.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>pickup_latitude</td>\n",
+       "      <td>8203.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>pickup_longitude</td>\n",
-       "      <td>7560.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>pickup_day</td>\n",
-       "      <td>3235.0</td>\n",
+       "      <td>8142.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>pickup_hour</td>\n",
-       "      <td>2995.0</td>\n",
+       "      <td>3322.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>pickup_second</td>\n",
-       "      <td>2910.0</td>\n",
+       "      <th>8</th>\n",
+       "      <td>pickup_day</td>\n",
+       "      <td>3284.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>pickup_minute</td>\n",
-       "      <td>2726.0</td>\n",
+       "      <td>2827.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>pickup_second</td>\n",
+       "      <td>2704.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>pickup_month</td>\n",
-       "      <td>1751.0</td>\n",
+       "      <td>1679.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>passenger_count</td>\n",
-       "      <td>918.0</td>\n",
+       "      <td>863.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>vendor_id</td>\n",
-       "      <td>387.0</td>\n",
+       "      <td>481.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>store_and_fwd_flag</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>86.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -733,22 +769,22 @@
       ],
       "text/plain": [
        "          feature_name  importance\n",
-       "3      pickup_latitude      9476.0\n",
-       "5     dropoff_latitude      7998.0\n",
-       "4    dropoff_longitude      7753.0\n",
-       "2     pickup_longitude      7560.0\n",
-       "8           pickup_day      3235.0\n",
-       "10         pickup_hour      2995.0\n",
-       "9        pickup_second      2910.0\n",
-       "11       pickup_minute      2726.0\n",
-       "7         pickup_month      1751.0\n",
-       "1      passenger_count       918.0\n",
-       "0            vendor_id       387.0\n",
-       "6   store_and_fwd_flag        90.0\n",
+       "4    dropoff_longitude      8928.0\n",
+       "5     dropoff_latitude      8445.0\n",
+       "3      pickup_latitude      8203.0\n",
+       "2     pickup_longitude      8142.0\n",
+       "10         pickup_hour      3322.0\n",
+       "8           pickup_day      3284.0\n",
+       "11       pickup_minute      2827.0\n",
+       "9        pickup_second      2704.0\n",
+       "7         pickup_month      1679.0\n",
+       "1      passenger_count       863.0\n",
+       "0            vendor_id       481.0\n",
+       "6   store_and_fwd_flag        86.0\n",
        "12         pickup_year         0.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
