utils -> taxi_utils

--- a/NYC Taxi 1 - Mean Duration.ipynb
+++ b/NYC Taxi 1 - Mean Duration.ipynb
@@ -30,14 +30,14 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import utils"
+    "import taxi_utils"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we use the function `read_data` which you can find in the `utils.py` file in this folder. In this case, `read_data` will create a *dataframe* which stores our tabular data. A dataframe has the `head()` method, which gives only the first five elements of the dataframe. We can use that to get a sense of what the dataframe looks like."
+    "Next, we use the function `read_data` which you can find in the `taxi_utils.py` file in this folder. In this case, `read_data` will create a *dataframe* which stores our tabular data. A dataframe has the `head()` method, which gives only the first five elements of the dataframe. We can use that to get a sense of what the dataframe looks like."
    ]
   },
   {
@@ -180,7 +180,7 @@
     "TRAIN_DIR = \"data/train.csv\"\n",
     "TEST_DIR = \"data/test.csv\"\n",
     "\n",
-    "data_train, data_test = utils.read_data(TRAIN_DIR, TEST_DIR)\n",
+    "data_train, data_test = taxi_utils.read_data(TRAIN_DIR, TEST_DIR)\n",
     "\n",
     "data_train.head(5)"
    ]
