--- a/NYC Taxi 2 - Baseline Solution.ipynb
+++ b/NYC Taxi 2 - Baseline Solution.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import utils"
+    "import taxi_utils"
    ]
   },
   {
@@ -172,7 +172,7 @@
     "TRAIN_DIR = \"data/train.csv\"\n",
     "TEST_DIR = \"data/test.csv\"\n",
     "\n",
-    "data_train, data_test = utils.read_data(TRAIN_DIR, TEST_DIR)\n",
+    "data_train, data_test = taxi_utils.read_data(TRAIN_DIR, TEST_DIR)\n",
     "\n",
     "data_train.head(5)"
    ]
@@ -511,7 +511,7 @@
     }
    ],
    "source": [
-    "model = utils.train_xgb(X_train, labels)"
+    "model = taxi_utils.train_xgb(X_train, labels)"
    ]
   },
   {
@@ -519,7 +519,7 @@
    "metadata": {},
    "source": [
     "<h2>Step 4: Make a Submission</h2>\n",
-    "Some utility functions are stored in `utils.py`. In that file there is a `predict_xgb` which tests data against our model and `feature_importances` which we will use below."
+    "Some utility functions are stored in `taxi_utils.py`. In that file there is a `predict_xgb` which tests data against our model and `feature_importances` which we will use below."
    ]
   },
   {
@@ -596,7 +596,7 @@
     }
    ],
    "source": [
-    "submission = utils.predict_xgb(model, X_test)\n",
+    "submission = taxi_utils.predict_xgb(model, X_test)\n",
     "submission.head(5)"
    ]
   },
@@ -791,7 +791,7 @@
    ],
    "source": [
     "feature_names = X_train.columns.values\n",
-    "ft_importances = utils.feature_importances(model, feature_names)\n",
+    "ft_importances = taxi_utils.feature_importances(model, feature_names)\n",
     "ft_importances"
    ]
   }
