--- a/NYC Taxi 3 - Simple Featuretools.ipynb
+++ b/NYC Taxi 3 - Simple Featuretools.ipynb
@@ -47,7 +47,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import featuretools as ft\n",
-    "import utils\n",
+    "import taxi_utils\n",
     "ft.__version__"
    ]
   },
@@ -191,7 +191,7 @@
     "TRAIN_DIR = \"data/train.csv\"\n",
     "TEST_DIR = \"data/test.csv\"\n",
     "\n",
-    "data_train, data_test = utils.read_data(TRAIN_DIR, TEST_DIR)\n",
+    "data_train, data_test = taxi_utils.read_data(TRAIN_DIR, TEST_DIR)\n",
     "\n",
     "data_train.head(5)"
    ]
@@ -1616,7 +1616,7 @@
    "outputs": [],
    "source": [
     "# separates the whole feature matrix into train data feature matrix, train data labels, and test data feature matrix \n",
-    "X_train, labels, X_test = utils.get_train_test_fm(feature_matrix)\n",
+    "X_train, labels, X_test = taxi_utils.get_train_test_fm(feature_matrix)\n",
     "labels = np.log(labels.values + 1)"
    ]
   },
@@ -1660,7 +1660,7 @@
     }
    ],
    "source": [
-    "model = utils.train_xgb(X_train, labels)"
+    "model = taxi_utils.train_xgb(X_train, labels)"
    ]
   },
   {
@@ -1744,7 +1744,7 @@
     }
    ],
    "source": [
-    "submission = utils.predict_xgb(model, X_test)\n",
+    "submission = taxi_utils.predict_xgb(model, X_test)\n",
     "submission.head(5)"
    ]
   },
@@ -2193,7 +2193,7 @@
    ],
    "source": [
     "feature_names = X_train.columns.values\n",
-    "ft_importances = utils.feature_importances(model, feature_names)\n",
+    "ft_importances = taxi_utils.feature_importances(model, feature_names)\n",
     "ft_importances"
    ]
   }
