Update for Featuretools 0.2.0

--- a/NYC Taxi 3 - Simple Featuretools.ipynb
+++ b/NYC Taxi 3 - Simple Featuretools.ipynb
@@ -25,17 +25,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/venv/local/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'0.1.16'"
+       "'0.2.1'"
       ]
      },
      "execution_count": 1,
@@ -1509,11 +1501,9 @@
     }
    ],
    "source": [
-    "from featuretools.primitives import (Day, Hour, Minute, Month, Weekday, Week, Weekend)\n",
-    "\n",
     "es.add_interesting_values()\n",
     "\n",
-    "trans_primitives = [Minute, Hour, Day, Week, Month, Weekday, Weekend]\n",
+    "trans_primitives = ['Minute', 'Hour', 'Day', 'Week', 'Month', 'Weekday', 'Weekend']\n",
     "\n",
     "feature_matrix, features = ft.dfs(entityset=es,\n",
     "                                  target_entity=\"trips\",\n",
@@ -2214,7 +2204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
