Run notebooks in python 3

--- a/NYC Taxi 2 - Baseline Solution.ipynb
+++ b/NYC Taxi 2 - Baseline Solution.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/venv/local/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/usr/local/Cellar/python3/3.6.2/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -187,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train = data_train.copy()\n",
@@ -206,9 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_test.loc[:, 'pickup_year'] = X_test['pickup_datetime'].dt.year\n",
@@ -233,9 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_test = X_test.drop(['pickup_datetime'], axis=1)\n",
@@ -436,9 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train = X_train.set_index(['id'])\n",
@@ -455,9 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "labels = np.log(X_train['trip_duration'].values + 1)\n",
@@ -622,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +621,7 @@
        "(625134, 14)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,10 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "submission.to_csv('trip_duration_baseline.csv', index=True, index_label='id')"
@@ -669,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -699,62 +687,62 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>dropoff_longitude</td>\n",
        "      <td>8928.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>1</th>\n",
        "      <td>dropoff_latitude</td>\n",
        "      <td>8445.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>pickup_latitude</td>\n",
        "      <td>8203.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>0</th>\n",
        "      <td>pickup_longitude</td>\n",
        "      <td>8142.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>5</th>\n",
        "      <td>pickup_hour</td>\n",
        "      <td>3322.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>pickup_day</td>\n",
        "      <td>3284.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>7</th>\n",
        "      <td>pickup_minute</td>\n",
        "      <td>2827.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>11</th>\n",
        "      <td>pickup_second</td>\n",
        "      <td>2704.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>pickup_month</td>\n",
        "      <td>1679.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>4</th>\n",
        "      <td>passenger_count</td>\n",
        "      <td>863.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>9</th>\n",
        "      <td>vendor_id</td>\n",
        "      <td>481.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>10</th>\n",
        "      <td>store_and_fwd_flag</td>\n",
        "      <td>86.0</td>\n",
        "    </tr>\n",
@@ -769,22 +757,22 @@
       ],
       "text/plain": [
        "          feature_name  importance\n",
-       "4    dropoff_longitude      8928.0\n",
-       "5     dropoff_latitude      8445.0\n",
-       "3      pickup_latitude      8203.0\n",
-       "2     pickup_longitude      8142.0\n",
-       "10         pickup_hour      3322.0\n",
-       "8           pickup_day      3284.0\n",
-       "11       pickup_minute      2827.0\n",
-       "9        pickup_second      2704.0\n",
-       "7         pickup_month      1679.0\n",
-       "1      passenger_count       863.0\n",
-       "0            vendor_id       481.0\n",
-       "6   store_and_fwd_flag        86.0\n",
+       "3    dropoff_longitude      8928.0\n",
+       "1     dropoff_latitude      8445.0\n",
+       "2      pickup_latitude      8203.0\n",
+       "0     pickup_longitude      8142.0\n",
+       "5          pickup_hour      3322.0\n",
+       "6           pickup_day      3284.0\n",
+       "7        pickup_minute      2827.0\n",
+       "11       pickup_second      2704.0\n",
+       "8         pickup_month      1679.0\n",
+       "4      passenger_count       863.0\n",
+       "9            vendor_id       481.0\n",
+       "10  store_and_fwd_flag        86.0\n",
        "12         pickup_year         0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,21 +786,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
